[package]
name = "mc"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "3.0.0"
extract-variant = "1.0.0"
futures = "0.3.31"
rand = "0.9.1"
rstest = "0.25.0"
rtest = "0.2.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
smol = "2.0.2"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["sync", "macros", "rt"] }

[workspace]
members = ["examples/*", "."]

[profile.bench]
debug = true
